security/auth/basic/vs-petstore-2.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: petstore
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - '*'
    routes:
      - matchers:
          - exact: /sample-route-1
        routeAction:
          single:
            upstream:
              name: default-petstore-8080
              namespace: gloo-system
        options:
          prefixRewrite: /api/pets
    options:
      extauth:
        configRef:
          # references the example AuthConfig we defined earlier
          name: basic-auth
          namespace: gloo-system
